kind of big refactor
